Fix overlap in topbar menu buttons

--- a/src/assets/sass/abstracts/_mixins.scss
+++ b/src/assets/sass/abstracts/_mixins.scss
@@ -13,19 +13,19 @@
   }
 
   @else if $class == sm {
-    @media (min-width: 768px) and (max-width: 991px) {
+    @media (min-width: 767px) and (max-width: 991px) {
       @content;
     }
   }
 
   @else if $class == md {
-    @media (min-width: 992px) and (max-width: 1199px) {
+    @media (min-width: 991px) and (max-width: 1199px) {
       @content;
     }
   }
 
   @else if $class == lg {
-    @media (min-width: 1200px) {
+    @media (min-width: 1199px) {
       @content;
     }
   }
