--- a/src/assets/sass/components/_topbar-dropdown.scss
+++ b/src/assets/sass/components/_topbar-dropdown.scss
@@ -6,7 +6,7 @@
     border: none;
     border-radius: 0;
     box-shadow: none !important;
-    height: 40px;
+    height: 100%;
     background-color: $color-primary;
 
     &:hover {
