--- a/src/assets/sass/layout/_topbar.scss
+++ b/src/assets/sass/layout/_topbar.scss
@@ -27,6 +27,8 @@ $font-to-use: Century Gothic;
     flex: 1 2 auto;
     height: 100%;
     justify-content: left;
+    padding: 0;
+    margin: 0;
 
     .top-icon {
       float: left;
